invode bash explicitly

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,3 +21,4 @@ setw -g window-status-current-attr reverse
 setw -g mode-keys vi
 
 set -g history-limit 99999
+set-option -g default-command "exec /bin/bash"
